turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:15: error: not found: value color
        if(i==color.length-1) {
              ^